General: Fix up some footer links and spacing.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -730,6 +730,8 @@ footer {
   padding-block: 6rem;
   // Prevent overflow on smol devices
   box-sizing: border-box;
+  // Always have this. (FIXME: This should be done cleaner)
+  gap: 60px !important;
 }
 
 .footer-ln {
